syntax = "proto3";

package io.harness.event;

option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

service PingPongService {
  rpc TryPing(Ping) returns (Pong);
}

message Ping {
  string delegate_id = 1;
  google.protobuf.Timestamp ping_timestamp = 2;
  string process_id = 3;
  string version = 4;
}

message Pong {
}
